# schedule

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: FORMULATION.md  SPECIFICATIONS.md
examples/: README.md  basic_workflow.env.yaml  gen_basic_workflow.py  gen_plate_batch.py  interface_load.document.yaml  interface_load.env.yaml  interface_load.workflow.yaml  job_sample.env.yaml  job_sample.workflow.yaml  reformatter.env.yaml  reformatter.workflow.yaml  reroute.env.yaml  reroute.status.yaml  reroute_chain.env.yaml  reroute_chain.status.yaml  reroute_stay.env.yaml  reroute_stay.status.yaml  simple.env.yaml  simple.status.yaml  two_arms.env.yaml  two_arms.workflow.yaml
examples/outputs/: basic_workflow.workflow.yaml  plate_batch.env.yaml  plate_batch.plan.yaml  plate_batch.workflow.yaml  reformatter.plan.yaml  reroute.replan.yaml  reroute_chain.replan.yaml  reroute_stay.replan.yaml  simple.plan.yaml  simple.replan.yaml  two_arms.plan.yaml
examples/sample_output/: job_sample.plan.yaml  reformatter.plan.yaml
ofplang/schedule/: __init__.py  __main__.py  cli.py
ofplang/schedule/core/: __init__.py  yamlnode.py  (+2 more)
tests/: schedutil.py  test_basic_workflow.py  test_cli.py  test_conformance.py  test_cpsat.py  test_envload.py  test_example_makespans.py  test_fold.py  test_identifiers.py  test_instance.py  test_interface.py  test_normalize.py  test_plan.py  test_plate_batch.py  test_pure_data.py  test_replan.py  test_replan_optimality.py  test_reroute.py  test_schedule_optimality.py  test_status.py  test_visualize.py  test_workflow.py
tests/conformance/: README.md
(+165 files in other folders)
