[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ofplang-schedule"
version = "0.0.0"
description = "Object-flow programming language v0 scheduler"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
# Standalone command; the umbrella `ofp` CLI (separate repo) exposes this as
# `ofp schedule`.
ofp-schedule = "ofplang.schedule.cli:main"

# `ofplang` is a PEP 420 namespace shared across the org's repos (validate,
# schedule, run, …); this distribution provides only the `ofplang.schedule`
# package under it.
[tool.setuptools.packages.find]
include = ["ofplang*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
